2012-11-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme!
	* de_DE.po: Updated German translation.  Thanks t_bb_!
	* et.po: Updated Estonian translation.  Thanks Rivo Zängov!
	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!

2012-10-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/tumblr: Added a basic suppor fot Tumblr.

2012-10-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py: Fixed a notebook pop-up menu.
	* updatewindow.py, facebook/account.py: Added support for Facebook
	  'Publish'.

2012-10-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py, facebook/*: Added support for Facebook 'Like'.

2012-10-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.7.1 release.

2012-10-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ar.po: Updated Arabic translation. Thanks Humaidan Mohammed!

2012-10-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twittytwister/twitter.py, twitter/account.py: Fixed Twitter API
	  endpoints. The API version number '1' is required.

2012-10-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/entry.py, html/readmore.js: Added support for 'See
	  more' on Facebook.

2012-10-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/feedsource.py, account.py: Implemented default
	  target on feed source dialogs.

2012-10-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py, accountliststore.py, plugins/facebook/*:
	  Implemented basic support for Facebook news feed.

2012-10-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/facebook/*: Implemented a Facebook authorization assistant.

2012-09-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/: Code refactoring.

2012-09-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.7 release.
	* de_DE.po: Updated German translation.  Thanks t_bb_!

2012-09-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py: Fixed a bug on changing group name.
